# quickfix_101

./: .gitignore  .travis.yml  AUTHORS  Gemfile  Makefile.am  README.md  autogen.sh  configure.ac
config/: fix_agents.rb
etc/: FIX42.xml  app.cfg  executor.cfg  mdsim.cfg
features/: algo.feature
features/step_definitions/: steps.rb
features/support/: env.rb
nbproject/: configurations.xml  project.xml
src/: App.cpp  Executor.cpp  ExecutorApp.cpp  ExecutorApp.h  IdHelper.cpp  IdHelper.h  MarketDataSimulator.cpp  MarketDataSimulator.h  Position.cpp  Position.h  Strategy.cpp  Strategy.h  Vwap.cpp  Vwap.h  Workspace.cpp  Workspace.h
